[package]
name = "wizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version="0.11",features=["dynamic_linking"]}
bevy-inspector-egui = "0.19"
# Networking

bevy_renet = "0.0.9" 

serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.1"
local-ip-address = "0.4.8"

## Networking - port forwarding
public-ip = "0.2.2"
tokio = {version = "1", features = ["full"]}

